# CallScribe

./: .gitignore  Makefile  README.md  config.py  diarizer.py  exporter.py  main.py  pyproject.toml  recorder.py  requirements.txt  setup.py  start.sh  summarizer.py  transcriber.py  ui.py
templates/: index.html
tests/: test_config.py  test_diarizer.py  test_exporter.py  test_recorder.py  test_summarizer.py  test_transcriber.py  test_ui.py
