[project]
name = "callscribe"
version = "0.1.0"
description = "Запись и транскрипция звонков (микрофон + системный звук) через faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "faster-whisper>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
