[project]
name = "callscribe"
version = "0.1.0"
description = "Запись и транскрипция звонков (микрофон + системный звук) через faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "faster-whisper>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.29",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[project.optional-dependencies]
# GPU-ускорение (CUDA 12). Ставить только при наличии NVIDIA GPU:
#   uv sync --extra gpu   (или: uv pip install nvidia-cublas-cu12 nvidia-cudnn-cu12)
# Библиотеки подгружаются автоматически (transcriber.ensure_cuda_libs).
gpu = [
    "nvidia-cublas-cu12>=12.3",
    "nvidia-cudnn-cu12>=9",
    "nvidia-cuda-nvrtc-cu12>=12.3",
]
# Диаризация спикеров для одиночных дорожек (mp4/моно). Тянет torch:
#   uv sync --extra diarize
# Плюс нужен HF-токен и принятые условия модели pyannote на huggingface.co.
diarize = [
    "pyannote.audio>=3.1",
]
